--- a/templates/pages/code_solutions/search_solutions.html
+++ b/templates/pages/code_solutions/search_solutions.html
@@ -309,16 +309,14 @@
            
             <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
         {% endif %} -->
-        <div class="pt-5" style="margin-left: 18%; margin-right: 18%;">
+        <div class="" style="margin-left: 18%; margin-right: 18%;">
             <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
         </div>
-        <h2 class="text-center" style="color: rgba(255, 255, 255, 0.664);">Suggestions</h2>
-        <div class="pb-4" style="margin-left: 18%; margin-right: 18%;">
-            <hr class="mx-5 my-3 my-md-4 p-0" style="background: white; color: white; height: 1px;">
-        </div>
+        <h2 class="text-center" style="color: rgba(255, 255, 255, 0.664);">Search Suggestions</h2>
+     
 
 
-        <div class="pt-3 row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res">
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-res">
         
             {% for solution in search_suggestions %}
 
