--- a/templates/base.html
+++ b/templates/base.html
@@ -136,8 +136,8 @@
         <!-- Google Analytics "Google tag (gtag.js)" -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKJNMQ58LS"></script>
 
-
-        
+        <!-- Monetag -->
+        <script src="../../../static/js/sw.js"></script>
 
         <title>Tech Career Time</title>
 
