--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-YKJNMQ58LS"></script>
 
         <!-- Monetag -->
-        <script src="../../../static/js/sw.js"></script>
+        <script src="../../../static/sw.js"></script>
 
         <title>Tech Career Time</title>
 
