--- a/templates/pages/code_solutions/code_solution.html
+++ b/templates/pages/code_solutions/code_solution.html
@@ -23,7 +23,7 @@
 
                     <!-- YouTube Video(s) -->
                     <!-- Carousel  -->
-                    <!-- {% if video.has_video %} 
+                    {% if video.has_video %} 
                         <div class="row py-2 text-center m-0 px-0 py-5">
 
                             <div id="carousel1" class="carousel slide p-0 m-0" data-bs-ride="carousel">
@@ -60,7 +60,7 @@
                             </div>
 
                         </div>
-                    {% endif %}  -->
+                    {% endif %} 
 
                     <!-- Solutions in language tabs -->
                     <div class="row py-2 m-0 px-0">
@@ -368,18 +368,19 @@
         </div>
 
         <!-- 2nd Content box / Seach Res -->
-        <!-- {% if search_res %}
+        {% if search_res %}
             <div class="row p-0 py-md-2 m-0">
                 <div class="col-12 p-0 m-0">
                     <div class="p-0 pb-4 p-md-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                         <div class="row py-2 m-0 text-center">
-                            <h3 class="col-12 m-0">Search Results</h3>
-                        </div> -->
+                            <h3 class="col-12 m-0">Search 🔍🌐 Results:</h3>
+                            <p>Below 👇 are additional resources found across the 🌐 World Wid Web (WWW) 🥳</p>
+                        </div>
 
                         <!-- YouTube Video(s) -->
                         <!-- Carousel  -->
-                        <!-- {% if search_res.video.has_video %} 
+                        {% if search_res.video.has_video %} 
                             <div class="row py-2 text-center m-0 p-0">
 
                                 <div id="carouse2" class="carousel slide m-0 p-0" data-bs-ride="carousel">
@@ -416,14 +417,14 @@
                                 </div>
 
                             </div>
-                        {% endif %}  -->
+                        {% endif %} 
 
                         <!-- Solutions in language tabs -->
-                        <!-- <div class="row ppy-2 m-0"> -->
+                        <div class="row ppy-2 m-0">
 
                             <!-- Choose language -->
                             <!-- Folder like tabs -->
-                            <!-- <nav>
+                            <nav>
                                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
 
                                     {% for language in search_res.languages %}
@@ -439,12 +440,12 @@
                                     {% endfor %}
 
                                 </div>
-                            </nav> -->
+                            </nav>
 
                             
 
                             <!-- Other Sites Solution(s) UI -->
-                            <!-- <div class="tab-content" id="nav-tabContent">
+                            <div class="tab-content" id="nav-tabContent">
                                 
                                 {% for language in search_res.languages %}
 
@@ -452,9 +453,9 @@
 
                                         <div class="tab-pane fade show active" id="nav-{{language.name}}-search-res" role="tabpanel" aria-labelledby="nav-{{language.name}}-search-res-tab" tabindex="0">
 
-                                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res">  -->
+                                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res"> 
                                                 <!-- *SEARCH RES* -->
-                                            <!-- </div>
+                                            </div>
                                             
                                             <script>
 
@@ -499,14 +500,14 @@
                                                 
                                                 upDateContent(searchSolutionsObj[language.name], language.name)
                                             </script>
-                                        </div> -->
+                                        </div>
 
-                                    <!-- {% else %}
+                                    {% else %}
 
                                         <div class="tab-pane fade"  id="nav-{{language.name}}-search-res" role="tabpanel" aria-labelledby="nav-{{language.name}}-search-res-tab" tabindex="0">
-                                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res">  -->
+                                            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xxl-6 m-0" id="search-query-{{language.name}}-res"> 
                                                 <!-- *SEARCH RES* -->
-                                            <!-- </div>
+                                            </div>
                                             
                                             <script>
 
@@ -531,8 +532,8 @@
 
                     </div>
                 </div>
-            </div> -->
-        <!-- {% endif %}  -->
+            </div>
+        {% endif %} 
 
         <!-- Prism JS code -->
         <script src="../../../static/js/prism.js"></script>
